--- a/config/two_percent_milk.conf
+++ b/config/two_percent_milk.conf
@@ -7,3 +7,51 @@
 
 # Uncomment the following line to turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
+
+
+
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_ZMK_MOUSE=y
+CONFIG_PMW3610=y
+
+
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_MOUSE=y
+
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=9
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=16
+CONFIG_BT_BUF_ACL_TX_COUNT=32
+CONFIG_BT_L2CAP_TX_BUF_COUNT=32
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
+
+# CONFIG_ZMK_EXT_POWER=y
+
+
+
+# https://github.com/inorichi/zmk-pmw3610-driver/blob/main/Kconfig
+CONFIG_PMW3610_CPI=1500
+CONFIG_PMW3610_CPI_DIVIDOR=4
+CONFIG_PMW3610_ORIENTATION_270=y
+CONFIG_PMW3610_SNIPE_CPI=800
+CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
+CONFIG_PMW3610_SCROLL_TICK=32
+CONFIG_PMW3610_INVERT_X=y
+CONFIG_PMW3610_INVERT_SCROLL_Y=n
+CONFIG_PMW3610_RUN_DOWNSHIFT_TIME_MS=3264
+CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
+#CONFIG_PMW3610_REST1_DOWNSHIFT_TIME_MS=9600
+#CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=
+#CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=
+#CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=
+#CONFIG_PMW3610_REST3_DOWNSHIFT_TIME_MS=
+#CONFIG_PMW3610_FORCE_AWAKE=n
+CONFIG_PMW3610_POLLING_RATE_125_SW=y
+
+CONFIG_PMW3610_SMART_ALGORITHM=y
+# CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=400
