--- a/config/two_percent_milk.conf
+++ b/config/two_percent_milk.conf
@@ -55,3 +55,4 @@ CONFIG_PMW3610_POLLING_RATE_125_SW=y
 
 CONFIG_PMW3610_SMART_ALGORITHM=y
 # CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=400
+CONFIG_ZMK_POINTING=y
